# vantage

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
app/: main.py
app/agents/: comparable_companies.py  fundamental_analysis.py  macro_sector.py  risk_assessment.py  sentiment_nlp.py  synthesis.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  models.py  session.py
app/graph/: research_graph.py  state.py
app/ingestion/: chunker.py  retriever.py  section_constants.py
app/models/: auth.py
app/services/: arxiv_client.py  auth_service.py  comparables_source.py  edgar_client.py  fred_client.py  groq_client.py  ingestion_service.py  news_client.py  progress_publisher.py  ticker_resolver.py  vector_store.py
app/workers/: celery_app.py  tasks.py
docs/: PRD.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  ContradictionsPanel.tsx  MemoView.tsx  api.ts  config.ts  labels.ts  main.tsx  ws.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py
requirements/: base.txt  dev.txt
tests/: conftest.py  test_boundaries.py  test_chunker.py  test_edgar_archive.py  test_ingest_api.py  test_ingestion_service.py  test_retriever.py  test_vector_store.py
tests/agents/: test_comparable_companies.py  test_fundamental_analysis.py  test_macro_sector.py  test_risk_assessment.py  (+2 more)
(+54 files in other folders)
